--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Municipalidad Distrital de Chongos Alto</h1>
+			<h1 class="logo">Municipalidad Distrital de Chongos Alto</h1>
 		</header>
 		<nav>
 		</nav>
