--- a/index.html
+++ b/index.html
@@ -12,13 +12,47 @@
 	</head>
 	<body>
 		<header>
-			<h1 class="logo">Municipalidad Distrital de Chongos Alto</h1>
+			<div class="block-box">
+				<div class="block block-1"></div>
+				<div class="block block-2"></div>
+				<div class="block block-3"></div>
+				<div class="block block-4"></div>
+				<div class="block block-5"></div>
+				<div class="block block-6"></div>
+				<div class="block block-4"></div>
+				<div class="block block-5"></div>
+				<div class="block block-6"></div>
+			</div>
+			<div class="logo-box">
+				<h1 class="logo-texto">Municipalidad Distrital de</h1>
+				<img src="images/logo_muni.png" class="logo-img">
+			</div>
+			<div class="transparencia-box">
+				<h3 class="transparencia-texto">Portal de Transparencia</h3>
+			</div>
+			<div class="redes-box">
+				<ul class="redes-list">
+					<li class="redes-item"><img src="images/facebook.png"></li>
+					<li class="redes-item"><img src="images/youtube.png"></li>
+					<li class="redes-item"><img src="images/twitter.png"></li>
+				</ul>
+			</div>
 		</header>
 		<nav>
+			<ul class="menu-list">
+				<li class="menu-item">Inicio</li>
+				<li class="menu-item">Municipalidad</li>
+				<li class="menu-item">El Distrito</li>
+				<li class="menu-item">Servicios</li>
+				<li class="menu-item">Turismo</li>
+			</ul>
 		</nav>
 		<section>
+			<div class="baner-box">
+			</div>
 		</section>
 		<footer>
 		</footer>
 	</body>
 </html>
+
